--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,22 @@
 @import "./reset.scss";
 
-@import "./colors.scss";
+@import "./globals";
+@import "./utility";
+@import "./themes";
+@import "./grid";
+@import "../components";
 
-:root {
-  --main-color: #{$orange-color};
+html,
+body {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
-div {
-  background-color: var(--main-color);
+#app-wrapper {
+  background-color: var(--cds-ui-background, #ffffff);
+  color: var(--cds-text-01, #161616);
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
