--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,3 +1,4 @@
 @import "./button/button";
 @import "./tile/tile";
-@import "./page-drawer/page-drawer"
+@import "./page-drawer/page-drawer";
+@import "./side-nav/side.nav";
