--- a/src/components/page-drawer/_page-drawer.scss
+++ b/src/components/page-drawer/_page-drawer.scss
@@ -1,4 +1,7 @@
 .co--page--drawer {
+  flex: 1 1 auto;
+  height: 100%;
+  width: 100%;
   display: grid;
   grid-template:
     auto 1fr auto /
@@ -8,7 +11,7 @@
     grid-column: 1/4;
   }
 
-  > &-left {
+  > &__left {
     grid-column: 1/2;
   }
 
@@ -16,7 +19,7 @@
     grid-column: 2/3;
   }
 
-  > &-right {
+  > &__right {
     grid-column: 3/4;
   }
 
