--- a/src/components/side-nav/side-nav.html
+++ b/src/components/side-nav/side-nav.html
@@ -1,4 +1,6 @@
-<div class="co--side-nav">
+<!-- tabindex = 1 important for focus-within to work and open the nav -->
+
+<div class="co--side-nav" tabindex="1">
   <div class="co--side-nav__items">
     <div class="co--side-nav__item">
       <div class="co--side-nav__link co--side-nav__link--current">
