--- a/src/styles/utility/_flex-box.scss
+++ b/src/styles/utility/_flex-box.scss
@@ -1,9 +1,9 @@
 .d-flex {
-  display: flex;
+  display: flex !important;
 }
 
 .d-inline-flex {
-  display: inline-flex;
+  display: inline-flex !important;
 }
 
 .flex-row-reverse {
