--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,4 +1,5 @@
 @import "./button/button";
 @import "./tile/tile";
 @import "./page-drawer/page-drawer";
-@import "./side-nav/side.nav";
+@import "./side-nav/side-nav";
+@import "./form"
