--- a/src/components/button/button.html
+++ b/src/components/button/button.html
@@ -1,26 +1,18 @@
-<div class="co--row">
+<div class="co--grid">
+  <div class="co--row">
     <div class="co--col-lg">
       <div>
         <h5>sm</h5>
-        <button
-          class="co--btn co--btn--primary co--btn--sm"
-          type="button"
-        >
+        <button class="co--btn co--btn--primary co--btn--sm" type="button">
           Button
         </button>
-        <button
-          class="co--btn co--btn--secondary co--btn--sm"
-          type="button"
-        >
+        <button class="co--btn co--btn--secondary co--btn--sm" type="button">
           Button
         </button>
         <button class="co--btn co--btn--danger co--btn--sm" type="button">
           Button
         </button>
-        <button
-          class="co--btn co--btn--tertiary co--btn--sm"
-          type="button"
-        >
+        <button class="co--btn co--btn--tertiary co--btn--sm" type="button">
           Button
         </button>
         <button class="co--btn co--btn--ghost co--btn--sm" type="button">
@@ -32,22 +24,13 @@
       <div>
         <h5>field</h5>
 
-        <button
-          class="co--btn co--btn--primary co--btn--field"
-          type="button"
-        >
+        <button class="co--btn co--btn--primary co--btn--field" type="button">
           Button
         </button>
-        <button
-          class="co--btn co--btn--secondary co--btn--field"
-          type="button"
-        >
+        <button class="co--btn co--btn--secondary co--btn--field" type="button">
           Button
         </button>
-        <button
-          class="co--btn co--btn--danger co--btn--field"
-          type="button"
-        >
+        <button class="co--btn co--btn--danger co--btn--field" type="button">
           Button
         </button>
       </div>
@@ -84,3 +67,4 @@
       </button>
     </div>
   </div>
+</div>
