--- a/src/components/form/index.scss
+++ b/src/components/form/index.scss
@@ -1,2 +1,5 @@
 @import "./checkbox/checkbox";
-@import "./text-input/text-input"
+@import "./text-input/text-input";
+@import "./text-area/text-area";
+@import "./select/select";
+@import "./toggle/toggle";
