--- a/src/components/form/index.scss
+++ b/src/components/form/index.scss
@@ -3,3 +3,5 @@
 @import "./text-area/text-area";
 @import "./select/select";
 @import "./toggle/toggle";
+@import "./autocomplete/autocomplete";
+@import "./radio/radio"
