--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -2,4 +2,9 @@
 @import "./tile/tile";
 @import "./page-drawer/page-drawer";
 @import "./side-nav/side-nav";
-@import "./form"
+@import "./form";
+@import "./tabs/tabs";
+@import "./tag/tag";
+@import "./notification/notification";
+@import "./search/search";
+@import "./slider/slider.scss";
