menu and modals

--- a/src/components/form/index.scss
+++ b/src/components/form/index.scss
@@ -2,6 +2,6 @@
 @import "./text-input/text-input";
 @import "./text-area/text-area";
 @import "./select/select";
-@import "./toggle/toggle";
 @import "./autocomplete/autocomplete";
-@import "./radio/radio"
+@import "./radio/radio";
+@import "./switch/switch";
