--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -7,4 +7,8 @@
 @import "./tag/tag";
 @import "./notification/notification";
 @import "./search/search";
-@import "./slider/slider.scss";
+@import "./slider/slider";
+@import "./menu/menu";
+@import "./card/card";
+@import "./scroll-area/scroll-area";
+@import "./modal/modal"
