--- a/src/components/tabs/tabs.html
+++ b/src/components/tabs/tabs.html
@@ -8,25 +8,25 @@
     <ul class="co--tabs__nav co--tabs__nav--hidden" role="tablist">
       <li
         class="co--tabs__nav-item co--tabs__nav-item--selected "
-        data-target=".tab-1-default" role="tab"  aria-selected="true"  >
+        data-target="#tab-panel-1-default" role="tab"  aria-selected="true"  >
         <a tabindex="0" id="tab-link-1-default" class="co--tabs__nav-link" href="javascript:void(0)" role="tab"
           aria-controls="tab-panel-1-default">Tab label 1</a>
       </li>
       <li
         class="co--tabs__nav-item "
-        data-target=".tab-2-default" role="tab"  >
+        data-target="#tab-panel-2-default" role="tab"  >
         <a tabindex="0" id="tab-link-2-default" class="co--tabs__nav-link" href="javascript:void(0)" role="tab"
           aria-controls="tab-panel-2-default">Tab label 2</a>
       </li>
       <li
         class="co--tabs__nav-item "
-        data-target=".tab-3-default" role="tab"  >
+        data-target="#tab-panel-3-default" role="tab"  >
         <a tabindex="0" id="tab-link-3-default" class="co--tabs__nav-link" href="javascript:void(0)" role="tab"
           aria-controls="tab-panel-3-default">Tab label 3</a>
       </li>
       <li
         class="co--tabs__nav-item  co--tabs__nav-item--disabled "
-        data-target=".tab-4-default" role="tab"  
+        data-target="#tab-panel-4-default" role="tab"  
         aria-disabled="true" >
         <a tabindex="0" id="tab-link-4-default" class="co--tabs__nav-link" href="javascript:void(0)" role="tab"
           aria-controls="tab-panel-4-default">Tab label 4</a>
@@ -35,19 +35,19 @@
   </div>
   <!-- The markup below is for demonstration purposes only -->
   <div class="co--tab-content">
-    <div id="tab-panel-1-default" class="tab-1-default" role="tabpanel" aria-labelledby="tab-link-1-default"
+    <div id="tab-panel-1-default" class="co--tab-panel" role="tabpanel" aria-labelledby="tab-link-1-default"
       aria-hidden="false" >
       <div>Content for first tab goes here.</div>
     </div>
-    <div id="tab-panel-2-default" class="tab-2-default" role="tabpanel" aria-labelledby="tab-link-2-default"
+    <div id="tab-panel-2-default" class="co--tab-panel" role="tabpanel" aria-labelledby="tab-link-2-default"
       aria-hidden="true"  hidden>
       <div>Content for second tab goes here.</div>
     </div>
-    <div id="tab-panel-3-default" class="tab-3-default" role="tabpanel" aria-labelledby="tab-link-3-default"
+    <div id="tab-panel-3-default" class="co--tab-panel" role="tabpanel" aria-labelledby="tab-link-3-default"
       aria-hidden="true"  hidden>
       <div>Content for third tab goes here.</div>
     </div>
-    <div id="tab-panel-4-default" class="tab-4-default" role="tabpanel" aria-labelledby="tab-link-4-default"
+    <div id="tab-panel-4-default" class="co--tab-panel" role="tabpanel" aria-labelledby="tab-link-4-default"
       aria-hidden="true"  hidden>
       <div>Content for fourth tab goes here.</div>
     </div>
@@ -63,25 +63,25 @@
     <ul class="co--tabs__nav co--tabs__nav--hidden" role="tablist">
       <li
         class="co--tabs__nav-item co--tabs__nav-item--selected "
-        data-target=".tab-1-container" role="tab"  aria-selected="true"  >
+        data-target="#tab-panel-1-container" role="tab"  aria-selected="true"  >
         <a tabindex="0" id="tab-link-1-container" class="co--tabs__nav-link" href="javascript:void(0)" role="tab"
           aria-controls="tab-panel-1-container">Tab label 1</a>
       </li>
       <li
         class="co--tabs__nav-item "
-        data-target=".tab-2-container" role="tab"  >
+        data-target="#tab-panel-2-container" role="tab"  >
         <a tabindex="0" id="tab-link-2-container" class="co--tabs__nav-link" href="javascript:void(0)" role="tab"
           aria-controls="tab-panel-2-container">Tab label 2</a>
       </li>
       <li
         class="co--tabs__nav-item "
-        data-target=".tab-3-container" role="tab"  >
+        data-target="#tab-panel-3-container" role="tab"  >
         <a tabindex="0" id="tab-link-3-container" class="co--tabs__nav-link" href="javascript:void(0)" role="tab"
           aria-controls="tab-panel-3-container">Tab label 3</a>
       </li>
       <li
         class="co--tabs__nav-item  co--tabs__nav-item--disabled "
-        data-target=".tab-4-container" role="tab"  
+        data-target="#tab-panel-4-container" role="tab"  
         aria-disabled="true" >
         <a tabindex="0" id="tab-link-4-container" class="co--tabs__nav-link" href="javascript:void(0)" role="tab"
           aria-controls="tab-panel-4-container">Tab label 4</a>
@@ -90,19 +90,19 @@
   </div>
   <!-- The markup below is for demonstration purposes only -->
   <div class="co--tab-content">
-    <div id="tab-panel-1-container" class="tab-1-container" role="tabpanel" aria-labelledby="tab-link-1-container"
+    <div id="tab-panel-1-container" class="co--tab-panel" role="tabpanel" aria-labelledby="tab-link-1-container"
       aria-hidden="false" >
       <div>Content for first tab goes here.</div>
     </div>
-    <div id="tab-panel-2-container" class="tab-2-container" role="tabpanel" aria-labelledby="tab-link-2-container"
+    <div id="tab-panel-2-container" class="co--tab-panel" role="tabpanel" aria-labelledby="tab-link-2-container"
       aria-hidden="true"  hidden>
       <div>Content for second tab goes here.</div>
     </div>
-    <div id="tab-panel-3-container" class="tab-3-container" role="tabpanel" aria-labelledby="tab-link-3-container"
+    <div id="tab-panel-3-container" class="co--tab-panel" role="tabpanel" aria-labelledby="tab-link-3-container"
       aria-hidden="true"  hidden>
       <div>Content for third tab goes here.</div>
     </div>
-    <div id="tab-panel-4-container" class="tab-4-container" role="tabpanel" aria-labelledby="tab-link-4-container"
+    <div id="tab-panel-4-container" class="co--tab-panel" role="tabpanel" aria-labelledby="tab-link-4-container"
       aria-hidden="true"  hidden>
       <div>Content for fourth tab goes here.</div>
     </div>
