--- a/src/components/form/select/select.html
+++ b/src/components/form/select/select.html
@@ -9,6 +9,7 @@
         aria-expanded="false"
         aria-controls="example-1i7ng3rpzyp-menu"
         aria-labelledby="example-1i7ng3rpzyp-label example-1i7ng3rpzyp-value"
+        data-select-target="#example-1i7ng3rpzyp-menu"
         type="button"
       >
         <span class="co--dropdown-text__inner" id="example-1i7ng3rpzyp-value">
@@ -155,6 +156,7 @@
         aria-expanded="false"
         aria-controls="example-gjjjeyxuf6-menu"
         aria-labelledby="example-gjjjeyxuf6-label example-gjjjeyxuf6-value"
+        data-select-target="#example-gjjjeyxuf6-menu"
         type="button"
       >
         <span class="co--dropdown-text__inner" id="example-gjjjeyxuf6-value">
@@ -309,6 +311,7 @@
         aria-expanded="false"
         aria-controls="example-xcfretaib7h-menu"
         aria-labelledby="example-xcfretaib7h-label example-xcfretaib7h-value"
+        data-select-target="#example-xcfretaib7h-menu"
         type="button"
       >
         <span class="co--dropdown-text__inner" id="example-xcfretaib7h-value">
@@ -460,6 +463,7 @@
         aria-expanded="false"
         aria-controls="example-ujn0i8pm5i8-menu"
         aria-labelledby="example-ujn0i8pm5i8-label example-ujn0i8pm5i8-value"
+        data-select-target="#example-ujn0i8pm5i8-menu"
         type="button"
       >
         <svg
@@ -608,239 +612,6 @@
         </li>
       </ul>
     </div>
-    <div class="co--form-requirement">
-      This is not a validation message
-    </div>
-  </div>
-</div>
-
-<div class="co--form-item">
-  <div class="co--dropdown__wrapper">
-    <span id="example-1i7ng3rpzyp-label" class="co--label">Dropdown label</span>
-    <div class="co--form__helper-text">Optional helper text.</div>
-    <div
-      data-dropdown
-      data-value
-      class="co--dropdown co--dropdown--show-selected co--dropdown--open"
-    >
-      <button
-        class="co--dropdown-text"
-        aria-haspopup="true"
-        aria-expanded="false"
-        aria-controls="example-1i7ng3rpzyp-menu"
-        aria-labelledby="example-1i7ng3rpzyp-label example-1i7ng3rpzyp-value"
-        type="button"
-      >
-        <span class="co--dropdown-text__inner" id="example-1i7ng3rpzyp-value">
-          Dropdown option
-        </span>
-        <span class="co--dropdown__arrow-container">
-          <svg
-            focusable="false"
-            preserveAspectRatio="xMidYMid meet"
-            xmlns="http://www.w3.org/2000/svg"
-            class="co--dropdown__arrow"
-            width="16"
-            height="16"
-            viewBox="0 0 16 16"
-            aria-hidden="true"
-          >
-            <path d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"></path>
-          </svg>
-        </span>
-      </button>
-      <ul
-        class="co--dropdown-list"
-        id="example-1i7ng3rpzyp-menu"
-        role="menu"
-        tabindex="0"
-        id="example-1i7ng3rpzyp-menu"
-        aria-hidden="true"
-        wh-menu-anchor="left"
-        aria-labelledby="example-1i7ng3rpzyp-label"
-      >
-        <li
-          data-option
-          data-value="all"
-          class="co--dropdown-item"
-          title="Option 1"
-        >
-          <a
-            class="co--dropdown-link"
-            href="javascript:void(0)"
-            tabindex="-1"
-            role="menuitemradio"
-            aria-checked="true"
-            id="example-1i7ng3rpzyp-item0"
-            >Option 1</a
-          >
-          <svg
-            focusable="false"
-            preserveAspectRatio="xMidYMid meet"
-            xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true"
-            class="co--list-box__menu-item__selected-icon"
-            width="16"
-            height="16"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6 10.6L2.5 7.1 1.8 7.8 5.3 11.3 6 12 13.1 4.9 12.4 4.2z"
-            ></path>
-          </svg>
-        </li>
-        <li
-          data-option
-          data-value="cloudFoundry"
-          class="co--dropdown-item"
-          title="Option 2"
-        >
-          <a
-            class="co--dropdown-link"
-            href="javascript:void(0)"
-            tabindex="-1"
-            role="menuitemradio"
-            aria-checked="false"
-            id="example-1i7ng3rpzyp-item1"
-            >Option 2</a
-          >
-          <svg
-            focusable="false"
-            preserveAspectRatio="xMidYMid meet"
-            xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true"
-            class="co--list-box__menu-item__selected-icon"
-            width="16"
-            height="16"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6 10.6L2.5 7.1 1.8 7.8 5.3 11.3 6 12 13.1 4.9 12.4 4.2z"
-            ></path>
-          </svg>
-        </li>
-        <li
-          data-option
-          data-value="staging"
-          class="co--dropdown-item"
-          title="Option 3"
-        >
-          <a
-            class="co--dropdown-link"
-            href="javascript:void(0)"
-            tabindex="-1"
-            role="menuitemradio"
-            aria-checked="false"
-            id="example-1i7ng3rpzyp-item2"
-            >Option 3</a
-          >
-          <svg
-            focusable="false"
-            preserveAspectRatio="xMidYMid meet"
-            xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true"
-            class="co--list-box__menu-item__selected-icon"
-            width="16"
-            height="16"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6 10.6L2.5 7.1 1.8 7.8 5.3 11.3 6 12 13.1 4.9 12.4 4.2z"
-            ></path>
-          </svg>
-        </li>
-        <li
-          data-option
-          data-value="dea"
-          class="co--dropdown-item"
-          title="Option 4"
-        >
-          <a
-            class="co--dropdown-link"
-            href="javascript:void(0)"
-            tabindex="-1"
-            role="menuitemradio"
-            aria-checked="false"
-            id="example-1i7ng3rpzyp-item3"
-            >Option 4</a
-          >
-          <svg
-            focusable="false"
-            preserveAspectRatio="xMidYMid meet"
-            xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true"
-            class="co--list-box__menu-item__selected-icon"
-            width="16"
-            height="16"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6 10.6L2.5 7.1 1.8 7.8 5.3 11.3 6 12 13.1 4.9 12.4 4.2z"
-            ></path>
-          </svg>
-        </li>
-        <li
-          data-option
-          data-value="router"
-          class="co--dropdown-item"
-          title="Option 5"
-        >
-          <a
-            class="co--dropdown-link"
-            href="javascript:void(0)"
-            tabindex="-1"
-            role="menuitemradio"
-            aria-checked="false"
-            id="example-1i7ng3rpzyp-item4"
-            >Option 5</a
-          >
-          <svg
-            focusable="false"
-            preserveAspectRatio="xMidYMid meet"
-            xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true"
-            class="co--list-box__menu-item__selected-icon"
-            width="16"
-            height="16"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6 10.6L2.5 7.1 1.8 7.8 5.3 11.3 6 12 13.1 4.9 12.4 4.2z"
-            ></path>
-          </svg>
-        </li>
-        <li
-          data-option
-          data-value="loremipsum"
-          class="co--dropdown-item"
-          title="An example option that is really long to show what should be done to handle long text"
-        >
-          <a
-            class="co--dropdown-link"
-            href="javascript:void(0)"
-            tabindex="-1"
-            role="menuitemradio"
-            aria-checked="false"
-            id="example-1i7ng3rpzyp-item5"
-            >An example option that is really long to show what should be done
-            to handle long text</a
-          >
-          <svg
-            focusable="false"
-            preserveAspectRatio="xMidYMid meet"
-            xmlns="http://www.w3.org/2000/svg"
-            aria-hidden="true"
-            class="co--list-box__menu-item__selected-icon"
-            width="16"
-            height="16"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6 10.6L2.5 7.1 1.8 7.8 5.3 11.3 6 12 13.1 4.9 12.4 4.2z"
-            ></path>
-          </svg>
-        </li>
-      </ul>
-    </div>
+    <div class="co--form-requirement">This is not a validation message</div>
   </div>
 </div>
