--- a/src/components/form/switch/switch.html
+++ b/src/components/form/switch/switch.html
@@ -1,3 +1,9 @@
+<!--
+  Copyright IBM Corp. 2016, 2018
+
+  This source code is licensed under the Apache-2.0 license found in the
+  LICENSE file in the root directory of this source tree.
+-->
 
 <div class="co--form-item">
     <input class="co--toggle-input" id="toggle0" type="checkbox">
