--- a/src/components/form/dropdown/dropdown.html
+++ b/src/components/form/dropdown/dropdown.html
@@ -9,7 +9,7 @@
         aria-expanded="false"
         aria-controls="example-1i7ng3rpzyp-menu"
         aria-labelledby="example-1i7ng3rpzyp-label example-1i7ng3rpzyp-value"
-        data-select-target="#example-1i7ng3rpzyp-menu"
+        data-dropdown-target="#example-1i7ng3rpzyp-menu"
         type="button"
       >
         <span class="co--dropdown-text__inner" id="example-1i7ng3rpzyp-value">
@@ -156,7 +156,7 @@
         aria-expanded="false"
         aria-controls="example-gjjjeyxuf6-menu"
         aria-labelledby="example-gjjjeyxuf6-label example-gjjjeyxuf6-value"
-        data-select-target="#example-gjjjeyxuf6-menu"
+        data-dropdown-target="#example-gjjjeyxuf6-menu"
         type="button"
       >
         <span class="co--dropdown-text__inner" id="example-gjjjeyxuf6-value">
@@ -311,7 +311,7 @@
         aria-expanded="false"
         aria-controls="example-xcfretaib7h-menu"
         aria-labelledby="example-xcfretaib7h-label example-xcfretaib7h-value"
-        data-select-target="#example-xcfretaib7h-menu"
+        data-dropdown-target="#example-xcfretaib7h-menu"
         type="button"
       >
         <span class="co--dropdown-text__inner" id="example-xcfretaib7h-value">
@@ -463,7 +463,7 @@
         aria-expanded="false"
         aria-controls="example-ujn0i8pm5i8-menu"
         aria-labelledby="example-ujn0i8pm5i8-label example-ujn0i8pm5i8-value"
-        data-select-target="#example-ujn0i8pm5i8-menu"
+        data-dropdown-target="#example-ujn0i8pm5i8-menu"
         type="button"
       >
         <svg
