--- a/src/components/form/index.scss
+++ b/src/components/form/index.scss
@@ -1,7 +1,9 @@
 @import "./checkbox/checkbox";
 @import "./text-input/text-input";
 @import "./text-area/text-area";
-@import "./select/select";
+@import "./dropdown/dropdown";
 @import "./autocomplete/autocomplete";
 @import "./radio/radio";
 @import "./switch/switch";
+@import "./multi-select/multi-select";
+@import "./chips/chips.scss";
