--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -9,6 +9,9 @@
 @import "./search/search";
 @import "./slider/slider";
 @import "./menu/menu";
+@import "./overflow-menu/overflow-menu";
 @import "./card/card";
 @import "./scroll-area/scroll-area";
-@import "./modal/modal"
+@import "./modal/modal";
+@import "./data-table/data-table";
+@import "./list/list";
