--- a/src/components/button/button.html
+++ b/src/components/button/button.html
@@ -6,18 +6,6 @@
         <button class="co--btn co--btn--primary co--btn--sm" type="button">
           Button
         </button>
-        <button class="co--btn co--btn--secondary co--btn--sm" type="button">
-          Button
-        </button>
-        <button class="co--btn co--btn--danger co--btn--sm" type="button">
-          Button
-        </button>
-        <button class="co--btn co--btn--tertiary co--btn--sm" type="button">
-          Button
-        </button>
-        <button class="co--btn co--btn--ghost co--btn--sm" type="button">
-          Button
-        </button>
       </div>
     </div>
     <div class="co--col-lg">
@@ -27,44 +15,34 @@
         <button class="co--btn co--btn--primary co--btn--field" type="button">
           Button
         </button>
-        <button class="co--btn co--btn--secondary co--btn--field" type="button">
-          Button
-        </button>
-        <button class="co--btn co--btn--danger co--btn--field" type="button">
-          Button
-        </button>
       </div>
     </div>
 
     <div class="co--col-lg">
       <div>
         <h5>lg</h5>
-        <button class="co--btn co--btn--primary" type="button">
-          Button
-        </button>
-        <button class="co--btn co--btn--secondary" type="button">
-          Button
-        </button>
-        <button class="co--btn co--btn--danger" type="button">
-          Button
-        </button>
+        <button class="co--btn co--btn--primary" type="button">Button</button>
       </div>
     </div>
+  </div>
+
+  <div class="mt-3">
+    <h5>Disabled</h5>
+    <button class="co--btn co--btn--primary" disabled type="button">Button</button>
+  </div>
+
+  <div class="mt-3">
+    <h5>Ghost</h5>
+    <button class="co--btn co--btn--ghost" type="button">Button</button>
   </div>
 
   <div class="mt-3">
     <h5>Button Set</h5>
 
     <div class="co--btn-set">
-      <button class="co--btn co--btn--secondary">
-        Secondary Button
-      </button>
-      <button class="co--btn co--btn--primary">
-        Primary Button
-      </button>
-      <button class="co--btn co--btn--danger">
-        Danger Button
-      </button>
+      <button class="co--btn co--btn--secondary">Secondary Button</button>
+      <button class="co--btn co--btn--primary">Primary Button</button>
+      <button class="co--btn co--btn--danger">Danger Button</button>
     </div>
   </div>
 </div>
