--- a/src/components/form/index.scss
+++ b/src/components/form/index.scss
@@ -7,4 +7,5 @@
 @import "./switch/switch";
 @import "./multi-select/multi-select";
 @import "./chips/chips.scss";
-@import "./toggle-buttons/toggle-button"
+@import "./toggle-buttons/toggle-button";
+@import "./number-input/number-input";
