--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -15,3 +15,7 @@
 @import "./modal/modal";
 @import "./data-table/data-table";
 @import "./list/list";
+@import "./pagination/pagination";
+@import "./progress-indicator/progress-indicator";
+@import "./accordion/accordion";
+@import "./date-picker/date-picker";
