--- a/src/components/page-drawer/_page-drawer.scss
+++ b/src/components/page-drawer/_page-drawer.scss
@@ -1,41 +1,47 @@
-.#{$prefix}--page--drawer {
-  flex: 1 1 auto;
-  height: 100%;
-  width: 100%;
-  display: grid;
-  grid-template:
-    auto 1fr auto /
-    auto 1fr auto;
+@mixin page-drawer {
+  .#{$prefix}--page--drawer {
+    flex: 1 1 auto;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template:
+      auto 1fr auto /
+      auto 1fr auto;
 
-  > header {
-    grid-column: 1/4;
-    overflow: hidden;
-    overflow-x: auto;
+    > header {
+      grid-column: 1/4;
+      overflow: hidden;
+      overflow-x: auto;
+    }
+
+    > .#{$prefix}--page--drawer__left {
+      grid-column: 1/2;
+      overflow: hidden;
+      overflow-y: auto;
+    }
+
+    > main {
+      grid-column: 2/3;
+
+      overflow: hidden;
+      overflow-y: auto;
+    }
+
+    > .#{$prefix}--page--drawer__right {
+      grid-column: 3/4;
+      overflow: hidden;
+      overflow-y: auto;
+    }
+
+    > footer {
+      grid-column: 1/4;
+
+      overflow: hidden;
+      overflow-x: auto;
+    }
   }
+}
 
-  > .#{$prefix}--page--drawer__left {
-    grid-column: 1/2;
-    overflow: hidden;
-    overflow-y: auto;
-  }
-
-  > main {
-    grid-column: 2/3;
-
-    overflow: hidden;
-    overflow-y: auto;
-  }
-
-  > .#{$prefix}--page--drawer__right {
-    grid-column: 3/4;
-    overflow: hidden;
-    overflow-y: auto;
-  }
-
-  > footer {
-    grid-column: 1/4;
-
-    overflow: hidden;
-    overflow-x: auto;
-  }
+@include exports("page-drawer") {
+  @include page-drawer;
 }
