--- a/src/components/form/multi-select/_multi-select.scss
+++ b/src/components/form/multi-select/_multi-select.scss
@@ -1,68 +1,72 @@
 @import "carbon-components/scss/components/multi-select/multi-select";
 
-@import "../../../styles/globals/vars";
+@mixin multiselect2 {
+  .#{$prefix}--list-box {
+    border-top-left-radius: $border-radius;
+    border-top-right-radius: $border-radius;
+  }
 
-.#{$prefix}--list-box {
-  border-top-left-radius: $border-radius;
-  border-top-right-radius: $border-radius;
+  .#{$prefix}--list-box__menu--sm {
+    max-height: rem(176px);
+    .#{$prefix}--list-box__menu-item__option {
+      height: rem(32px);
+      padding-top: rem(7px);
+      padding-bottom: rem(7px);
+    }
+    .#{$prefix}--list-box__menu-item {
+      height: rem(32px);
+    }
+  }
+
+  .#{$prefix}--list-box__menu--xl {
+    max-height: rem(264px);
+    .#{$prefix}--list-box__menu-item__option {
+      height: rem(48px);
+      padding-top: rem(15px);
+      padding-bottom: rem(15px);
+    }
+    .#{$prefix}--list-box__menu-item {
+      height: rem(48px);
+    }
+  }
+
+  .#{$prefix}--list-box__menu {
+    display: none;
+    max-height: initial;
+    width: initial;
+    &--shown {
+      display: block;
+    }
+
+    .#{$prefix}--list-box__menu-item__option .#{$prefix}--checkbox-wrapper {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+
+    .#{$prefix}--list-box__menu-item__option .#{$prefix}--checkbox-label {
+      display: inline-block;
+      width: 100%;
+      padding-left: rem(28px);
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+
+    .#{$prefix}--list-box__menu-item__option > .#{$prefix}--form-item {
+      flex-direction: row;
+      margin: 0;
+    }
+
+    .#{$prefix}--list-box__menu-item
+      .#{$prefix}--checkbox:checked
+      ~ .#{$prefix}--checkbox-label-text {
+      color: $text-01;
+    }
+  }
 }
 
-.#{$prefix}--list-box__menu--sm {
-  max-height: rem(176px);
-  .#{$prefix}--list-box__menu-item__option {
-    height: rem(32px);
-    padding-top: rem(7px);
-    padding-bottom: rem(7px);
-  }
-  .#{$prefix}--list-box__menu-item {
-    height: rem(32px);
-  }
-}
-
-.#{$prefix}--list-box__menu--xl {
-  max-height: rem(264px);
-  .#{$prefix}--list-box__menu-item__option {
-    height: rem(48px);
-    padding-top: rem(15px);
-    padding-bottom: rem(15px);
-  }
-  .#{$prefix}--list-box__menu-item {
-    height: rem(48px);
-  }
-}
-
-.#{$prefix}--list-box__menu {
-  display: none;
-  max-height: initial;
-  width: initial;
-  &--shown {
-    display: block;
-  }
-
-  .#{$prefix}--list-box__menu-item__option .#{$prefix}--checkbox-wrapper {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
-
-  .#{$prefix}--list-box__menu-item__option .#{$prefix}--checkbox-label {
-    display: inline-block;
-    width: 100%;
-    padding-left: rem(28px);
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-
-  .#{$prefix}--list-box__menu-item__option > .#{$prefix}--form-item {
-    flex-direction: row;
-    margin: 0;
-  }
-
-  .#{$prefix}--list-box__menu-item
-    .#{$prefix}--checkbox:checked
-    ~ .#{$prefix}--checkbox-label-text {
-    color: $text-01;
-  }
+@include exports("multiselect2") {
+  @include multiselect2;
 }
