--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -19,3 +19,4 @@
 @import "./progress-indicator/progress-indicator";
 @import "./accordion/accordion";
 @import "./date-picker/date-picker";
+@import "./loading/loading"
