--- a/src/components/side-nav/_side-nav.scss
+++ b/src/components/side-nav/_side-nav.scss
@@ -105,7 +105,7 @@ $unit: 0.5rem;
 
     text-decoration: none;
     transition: color $duration--fast-02, background-color $duration--fast-02,
-      outline $duration--fast-02;
+      outline $duration--fast-02, padding $duration--fast-02;
 
     &.#{$prefix}--side-nav__link--current,
     &:hover {
@@ -130,6 +130,10 @@ $unit: 0.5rem;
       @include text-overflow();
 
       user-select: none;
+    }
+
+    @include expanded() {
+      padding: 0 mini-units(4);
     }
   }
 
