--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -19,4 +19,5 @@
 @import "./progress-indicator/progress-indicator";
 @import "./accordion/accordion";
 @import "./date-picker/date-picker";
-@import "./loading/loading"
+@import "./date-picker/calender/date-picker-calender";
+@import "./loading/loading";
