--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@ body {
   overflow: hidden;
   font-family: "IBM Plex Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
+  color:$text-01
 }
 
 #app-wrapper {
