--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -21,3 +21,4 @@
 @import "./date-picker/date-picker";
 @import "./date-picker/calender/date-picker-calender";
 @import "./loading/loading";
+@import "./calender/calender";
